crates/toner-tlb-macros/tests/compile-fail/bit_unpack_ensure_empty.rs
use toner_tlb_macros::BitUnpack;

#[derive(BitUnpack)]
#[tlb(ensure_empty)]
struct Bad {
    #[tlb(unpack)]
    val: bool,
}

fn main() {}
